# cmx-ermitteln

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  pages.yml
aufnehmen/: Cargo.toml
aufnehmen/src/: cli.rs  main.rs
ermitteln/: Cargo.toml
ermitteln-python/: Cargo.toml  ermitteln.pyi  pyproject.toml
ermitteln-python/src/: lib.rs
ermitteln-wasm/: Cargo.toml
ermitteln-wasm/src/: lib.rs
ermitteln/src/: lib.rs
frontend/: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  app.vue  nuxt.config.ts  package.json  tailwind.config.ts
frontend/assets/css/: tailwind.css
frontend/components/: AppHeader.vue  CreatorBlock.vue  CreatorRole.vue  SearchBox.vue  SearchResult.vue  SpinnerLoading.vue  StatsBlock.vue  Toast.vue  ToastContainer.vue
frontend/composables/: use-ermitteln.ts  use-mobile-device.ts  use-toast.ts
frontend/layouts/: default.vue
frontend/pages/: about.vue  index.vue  stats.vue
lekture/: Cargo.toml
lekture/src/: cli.rs  common.rs  main.rs  models.rs  redump.rs
scripts/: download-assets.py
