[workspace]
resolver = "2"
members = [
    "aufnehmen",
    "ermitteln",
    "ermitteln-python",
    "ermitteln-wasm",
    "lekture",
]

[workspace.package]
version = "0.1.4"
edition = "2021"
authors = ["noaione <noaione@n4o.xyz>"]
license = "MIT"
repository = "https://github.com/noaione/cmx-cover"

[workspace.dependencies]
image_hasher = "2.0.0"
image = { version = "0.25.2", default-features = false, features = ["jpeg"] }
sha2 = "0.10.8"

[profile.release]
lto = true
opt-level = "z"
