[package]
name = "aufnehmen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ingestion system for Meilisearch"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meilisearch-sdk = "0.24.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
clap = { version = "*", features = ["derive"] }
ermitteln = { path = "../ermitteln" }
sha2 = { workspace = true }
