[package]
name = "ermitteln-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A thin-wrapper around image_hasher to make it usable in Python."
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ermitteln = { path = "../ermitteln" }
pyo3 = { version = "0.22.2", features = ["extension-module"] }

[lib]
name = "ermitteln"
crate-type = ["cdylib"]
