[package]
name = "ermitteln-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A simple image hasher written in Rust for WASM"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image_hasher.workspace = true
image.workspace = true
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]
