[package]
name = "ermitteln-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A thin-wrapper around image_hasher to make it usable in the browser via WASM."
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ermitteln = { path = "../ermitteln" }
wasm-bindgen = "0.2"
js-sys = "0.3"

[lib]
crate-type = ["cdylib"]
