[package]
name = "lekture"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A tool to read Meilisearch dump and re-dump it to JSON format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
tar = "0.4"
tempfile = "3.10"
serde = "1.0.197"
serde_json = "1.0.114"
clap = { version = "4.5.3", features = ["derive"] }
rayon = "1.9.0"